# mulle-buffer

./: .gitignore  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  mulle-buffer.sublime-project  package.json
.bootstrap/: embedded_repositories  repositories
.github/workflows/: mulle-sde-ci.i686.yml  mulle-sde-ci.yml  semgrep.yml
.mulle-env/share/: environment-aux.sh  environment-project.sh  environment-share.sh
.mulle-sde/share/: extension
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh  environment-user-nat-os-linux.sh  environment-user-nat.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: tool  tool-extension
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
.travis.d/: script
assets/dox/: TOC.md
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: AllLoadC.cmake  Environment.cmake  ExecutableAux.cmake  Files.cmake  InstallLibrary.cmake  LinkManifestC.cmake  PostSharedLibrary.cmake  Standalone.cmake  StandaloneC.cmake  StartupC.cmake
cola/: api.md.bud  description.md.bud  info.md.bud  properties.plist
cola/wilted/: add.md.bud  author.md.bud  install.md.bud  platforms-and-compilers.md.bud  you-are-here.md.bud
dox/: API_BUFFER.md  API_FLEXBUFFER.md  API_FLUSHABLEBUFFER.md
dox/internal/: _BUFFER.md
mulle-buffer.xcodeproj/: project.pbxproj
mulle-buffer.xcodeproj/xcshareddata/xcschemes/: Libraries.xcscheme
mulle-project/: formula-info.sh
pix/: Makefile  mulle-buffer-alloca.dot  mulle-buffer-malloc.dot  mulle-buffer-overflow.dot
src/: _dependencies.h  _mulle-buffer-include-private.h  _mulle-buffer-include.h  _mulle-buffer.c  _mulle-buffer.h  _mulle_buffer.c  _mulle_buffer.h  dependencies.h  include.h  mulle--buffer.c  mulle--buffer.h  mulle-buffer-standalone.c  mulle-buffer.c  mulle-buffer.h  mulle-buffer_docs.md  mulle-data.h  mulle-flexbuffer.h  mulle-flushablebuffer.c  mulle-flushablebuffer.h  mulle_buffer.c  mulle_buffer.h  mulle_buffer.hbak  mulle_buffer_standalone.c
src/generic/: include-private.h  include.h
src/reflect/: _mulle-buffer-include-private.h  _mulle-buffer-include.h  _mulle-buffer-provide.h  _mulle-buffer-versioncheck.h
templates/: README.md.scion
test/: coverage.json  include.h  mulle-buffer.sublime-project
test/.mulle-sde/share/: mulle-test
test/.mulle-sourcetree/etc/: config
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh  environment-user-nat.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/env/: tool-extension
test/.mulle/share/sde/: extension  mulle-test
test/ai/: coverage.c  coverage.stdout
test/buffer/: add.c  add.stdout  allocator.c  c-string.c  c-string.stdout  const.c  create.c  create.stdout  do-flexible.c  do-flexible.stdout  do-inflexible.c  do-inflexible.stdout  do-string.c  do.c  example.c  extract.c  extract.stdout  flexbuffer.c  flexbuffer.stdout  flexible.c  flexible.stdout  flushexample.c  growstatic.c  growstatic.stdout  growstress.c  growstress.stdout  hexdump.c  hexdump.stdout  intersect.c  make-inflexible.c  make-inflexible.stdout  misc.c  quoted.c  quoted.stdout  readonly.c  readonly.stdout  remove-range.c  remove-range.stdout  reset.c  seek.c  (+4 more)
tests/: build-test.sh  run-test.sh
tests/buffer/: add.c  example.c  example.stdout  flushexample.c  intersect.c  intersect.stdout  setlength.c  setlength.stdout
